# Magical8bitPlug2

./: .gitignore  Magical8bitPlug2.jucer  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
Builds/MacOSX/: Icon.icns  Info-AU.plist  Info-AUv3_AppExtension.plist  Info-Standalone_Plugin.plist  Info-VST.plist
Builds/MacOSX/Magical8bitPlug2.xcodeproj/: project.pbxproj
Builds/VisualStudio2019/: Magical8bitPlug2.sln  Magical8bitPlug2_SharedCode.vcxproj  Magical8bitPlug2_SharedCode.vcxproj.filters  Magical8bitPlug2_StandalonePlugin.vcxproj  Magical8bitPlug2_VST.vcxproj  Magical8bitPlug2_VST3.vcxproj  resources.rc
JuceLibraryCode/: AppConfig.h  BinaryData.cpp  BinaryData.h  JuceHeader.h
Source/: AdvancedParamsComponent.cpp  AdvancedParamsComponent.h  BaseVoice.cpp  BaseVoice.h  BasicParamsComponent.cpp  BasicParamsComponent.h  BendParamsComponent.cpp  BendParamsComponent.h  CheckBoxComponent.cpp  CheckBoxComponent.h  ChoiceComponent.cpp  ChoiceComponent.h  ColorScheme.cpp  ColorScheme.h  CustomEnvelopeComponent.cpp  CustomEnvelopeComponent.h  CustomSynth.cpp  CustomSynth.h  Defs.h  EnvelopeParamsComponent.cpp  EnvelopeParamsComponent.h  EnvelopeParserTest.h  FrameSequence.h  FrameSequenceParseErrors.cpp  FrameSequenceParseErrors.h  FrameSequenceParser.cpp  FrameSequenceParser.h  MonophonicComponent.cpp  MonophonicComponent.h  NoiseParamsComponent.cpp  NoiseParamsComponent.h  NoiseVoice.cpp  NoiseVoice.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PulseParamsComponent.cpp  PulseParamsComponent.h  PulseVoice.cpp  (+21 more)
builder_linux/: .gitignore  CMakeLists.txt  README.md  builder_linux.sh  installer_linux.sh  magical8bitplug2.desktop
docs/: readme-en.html  readme-ja.html
